chore: yarn add @uifox-at-doxo/vuetify

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "templates"
   ],
   "dependencies": {
+    "@uifox-at-doxo/vuetify": "^1.0.0",
     "deepmerge": "^4.2.2",
     "sass": "~1.32.13",
     "sass-loader": "^10.2.0",
