--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "@uifox-at-doxo/vuetify": "^1.0.0",
     "deepmerge": "^4.2.2",
     "sass": "~1.32.13",
-    "sass-loader": "^10.2.0",
-    "vuetify-loader": "^1.7.3"
+    "sass-loader": "^10.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
